@startuml Image-Sorter

class ImageTimestamp {
    +timestamp : date
    --
    +get_timestamp()
}

class ImagePath {
    +path : str
    --
    +get_path()
}

class ImageGPS {
    +latitude : tuple
    +latitude_ref : str
    +longitude : tuple
    +longitude_ref : str
    --
    +get_coords()
}

class Location {
    +location_id : int <<PK>>
    +country : str
    +city : str
}

class GeocoderService {
    --
    +get_location(coords : ImageGPS) : (country: str, city: str)
}

class ImageMetadata {
    -image_id : int <<PK>>
    +coords : ImageGPS
    --
    +set_metadata()
}

class ImageOrganizer {
    +image_metadata : ImageMetadata
    --
    +organize_by_location()
    +sort_by_timestamp()
    +update_path()
}

' ' Add a database
' class ImageDB {
'     -db_connection : Connection
'     --
'     +store_metadata(metadata : ImageMetadata)
'     +load_metadata(image_id : int) : ImageMetadata
' }

' --- RELATIONSHIPS ---

' ImageMetadata is composed of the data components
ImageMetadata "1" *-- "1" ImageTimestamp : has
ImageMetadata "1" *-- "1" ImagePath : has
ImageMetadata "1" *-- "1" ImageGPS : has
ImageMetadata "1" *-- "1" Location : has

' ImageMetadata uses the GeocoderService to get location data
ImageMetadata "1" ..> "1" GeocoderService : uses for Location

' ImageOrganizer manages a collection of ImageMetadata
ImageOrganizer "1" o--> "*" ImageMetadata : manages

' ' ImageOrganizer uses the GeocoderService service and the DB service
' ImageOrganizer "1" --> "1" ImageDB : uses persistence


@enduml


